force-app/main/default/objects/Lead/fields/FOPS_Client_Timezone__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Client_Timezone__c</fullName>
    <inlineHelpText>An AEST-only role from Vietnam is a different proposition. Capture it early.</inlineHelpText>
    <label>Client Timezone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>