force-app/main/default/objects/Lead/fields/FOPS_Detected_Skills__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Detected_Skills__c</fullName>
    <inlineHelpText>Pre-parse comma list. Normalised to Skill Requirements on conversion.</inlineHelpText>
    <label>Detected Skills</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>