force-app/main/default/objects/Lead/fields/FOPS_Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Disqualification_Reason__c</fullName>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rate below floor</fullName>
            </value>
            <value>
                <fullName>Timezone impossible</fullName>
            </value>
            <value>
                <fullName>Skill mismatch</fullName>
            </value>
            <value>
                <fullName>Onsite required</fullName>
            </value>
            <value>
                <fullName>Client blacklisted</fullName>
            </value>
            <value>
                <fullName>Spam / mass mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>