force-app/main/default/objects/Lead/fields/FOPS_End_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>FOPS_End_Client_Name__c</fullName>
    <label>End Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>