force-app/main/default/objects/Lead/fields/FOPS_Is_Agency__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Is_Agency__c</fullName>
    <label>Is Agency</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>