force-app/main/default/objects/Lead/fields/FOPS_Role_Title__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Role_Title__c</fullName>
    <label>Role Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>