force-app/main/default/objects/Lead/fields/FOPS_Work_Mode__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Work_Mode__c</fullName>
    <label>Work Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>